[package]
name = "astra-sentinel"
version = "0.1.0"
edition = "2025"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dotenvy = "0.15"
urlencoding = "2"
